--- a/BA-Programacion/index.html
+++ b/BA-Programacion/index.html
@@ -13,6 +13,7 @@
     <main>
         <h2>Subtitulo</h2>
         <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <p>HOLA</p>
     </main>
 </body>
 </html>
